Add support for presigned urls
